# cook-keep

./: README.md  docker-compose.yml
backend/: .devcontainer.json  Dockerfile  pyproject.toml
backend/.devcontainer/: devcontainer.json
backend/django_app/accounts/: admin.py  authentication.py  models.py  serializers.py  urls.py  views.py
backend/django_app/accounts/migrations/: 0001_initial.py
backend/django_app/api/: admin.py  models.py  serializers.py  urls.py  views.py
backend/django_app/api/migrations/: 0001_initial.py  0002_alter_images_image_url_alter_recipestag_recipe_id_and_more.py
backend/django_app/api/templates/: base.html  recipe_create.html  recipe_list.html
backend/django_app/django_app/: authentication.py  settings.py  urls.py
docker-test/: Dockerfile-backend
front/: .devcontainer.json  Dockerfile
front/React/: Dockerfile  db.json  index.html  package-lock.json  package.json
front/React/src/: App.jsx  index.css
front/React/src/api/endpoint/: authEndpoint.jsx  dbEndpoint.jsx  domainEndpoint.jsx  loginEndpoint.jsx  recipeDetail.jsx  recipeRegistEndpoint.jsx  recipesEndpoint.jsx  signupEndpoint.jsx  uploadImageUrl.jsx
front/React/src/pages/Login/: Login.jsx  Login.module.css
front/React/src/pages/RecipeCard/: RecipeCard.jsx
front/React/src/pages/RecipeDetail/: RecipeDetail.jsx  RecipeDetail.module.css
front/React/src/pages/RecipeList/: RecipeList.jsx  RecipeList.module.css  (+1 more)
front/React/src/router/: router.jsx
front/React/src/state/: recipeDetailState.jsx  recipesState.jsx  userState.jsx
nginx/: Dockerfile  nginx.conf
(+12 files in other folders)
